syntax = "proto3";

option go_package = "./rpc";

service SwapService {
  // RPC methods
  rpc SwapIn(SwapInRequest) returns (SwapInResponse);
  rpc SwapOut(SwapOutRequest) returns (SwapOutResponse);
}

// Enum definition
enum Chain {
  BITCOIN = 0;
  LIQUID = 1;
}

enum Network {
  MAINNET = 0;
  TESTNET = 1;
  REGTEST = 2;
}

// Message definitions
message SwapInRequest {
  string invoice = 1;
  Network network = 2;
}

message SwapInResponse {
  string swapId = 1;
}

message SwapOutRequest {
  Chain chain = 1;
  // Amount in satoshis
  uint32 amountSats = 2;
  // Optional Destination address
  string address = 3;
}

message SwapOutResponse {}
